--- a/app/package.json
+++ b/app/package.json
@@ -60,6 +60,7 @@
     "@web3-react/metamask": "^8.0.18-beta.0",
     "@web3-react/walletconnect": "8.0.25-beta.0",
     "big.js": "^6.1.1",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
     "color": "^3.1.3",
     "d3-array": "^3.1.1",
@@ -73,6 +74,7 @@
     "downshift": "^6.1.3",
     "ethers": "^5.5.4",
     "event-target-shim": "^6.0.2",
+    "faker": "^6.6.6",
     "fast-deep-equal": "^3.1.3",
     "fastdom": "^1.0.10",
     "firebase": "^8.7.1",
@@ -85,6 +87,7 @@
     "numeral": "^2.0.6",
     "puppeteer": "^13.5.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-is": "^17.0.2",
