--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@terra-money/terra.js": "^3.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@handbook/markdown-source-import": "^1.1.0",
     "@ssen/prettier-config": "^2.0.1",
     "@types/eslint": "^7.2.14",
@@ -54,5 +55,8 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@types/faker": "^6.6.9"
   }
 }
